--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Node wrapper around xctool",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "git submodule update -i -r"
   },
   "bin": {
     "xctool-node": "./bin/xctool-node"
@@ -22,6 +23,7 @@
     "url": "https://github.com/jesseditson/xctool-node/issues"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "execSync": "~1.0.1-pre",
     "glob": "^4.0.5",
     "terminal-menu": "~0.3.2"
